force-app/main/default/objects/Progress_Report__c/fields/Accomplishments_this_Reporting_Period__c.field-meta.xml
<CustomField>
    <fullName>Accomplishments_this_Reporting_Period__c</fullName>
    <label>Accomplishments this Reporting Period</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>