force-app/main/default/objects/Progress_Report__c/fields/Assistance_Needed__c.field-meta.xml
<CustomField>
    <fullName>Assistance_Needed__c</fullName>
    <label>Assistance Needed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_or_No</valueSetName>
    </valueSet>
</CustomField>