force-app/main/default/objects/Progress_Report__c/fields/Assistance_Needed_Details__c.field-meta.xml
<CustomField>
    <fullName>Assistance_Needed_Details__c</fullName>
    <label>Assistance Needed Details</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>