force-app/main/default/objects/Progress_Report__c/fields/Attended_Meetings__c.field-meta.xml
<CustomField>
    <fullName>Attended_Meetings__c</fullName>
    <label>Attended Meetings</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Frequency</valueSetName>
    </valueSet>
</CustomField>