force-app/main/default/objects/Progress_Report__c/fields/Auto_Email_Trigger_Date__c.field-meta.xml
<CustomField>
    <fullName>Auto_Email_Trigger_Date__c</fullName>
    <description
  >Date to trigger auto-emails on a recurring basis. NPAL</description>
    <inlineHelpText
  >Date to trigger auto-emails on a recurring basis. NPAL</inlineHelpText>
    <label>Auto-Email Trigger Date</label>
    <type>Date</type>
</CustomField>