force-app/main/default/objects/Progress_Report__c/fields/Background_Checks__c.field-meta.xml
<CustomField>
    <fullName>Background_Checks__c</fullName>
    <label>Background Checks</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_or_No</valueSetName>
    </valueSet>
</CustomField>