force-app/main/default/objects/Progress_Report__c/fields/Chromebooks_Utilized__c.field-meta.xml
<CustomField>
    <fullName>Chromebooks_Utilized__c</fullName>
    <label>Chromebooks Utilized</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>