force-app/main/default/objects/Progress_Report__c/fields/Conducted_Outreach__c.field-meta.xml
<CustomField>
    <fullName>Conducted_Outreach__c</fullName>
    <label>Conducted Outreach</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Frequency</valueSetName>
    </valueSet>
</CustomField>