force-app/main/default/objects/Progress_Report__c/fields/Cooperation_Collaboration__c.field-meta.xml
<CustomField>
    <fullName>Cooperation_Collaboration__c</fullName>
    <label>Cooperation Collaboration</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>