force-app/main/default/objects/Progress_Report__c/fields/Current_Module_Name__c.field-meta.xml
<CustomField>
    <fullName>Current_Module_Name__c</fullName>
    <label>Current Module Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>