force-app/main/default/objects/Progress_Report__c/fields/Curriculum_Used__c.field-meta.xml
<CustomField>
    <fullName>Curriculum_Used__c</fullName>
    <label>Curriculum Used</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NPAL/ Digital Harbor Technology</fullName>
            </value>
            <value>
                <fullName
        >McGruff Club- National Crime Prevention Council</fullName>
                <label>McGruff Club- National Crime Prevention Council</label>
            </value>
            <value>
                <fullName>Badges for Baseball</fullName>
            </value>
            <value>
                <fullName>NPAL Cambridge Self-Advocacy</fullName>
            </value>
            <value>
                <fullName>Innovation 4.0</fullName>
            </value>
            <value>
                <fullName>DEA</fullName>
            </value>
            <value>
                <fullName>Unfinished Business</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>