force-app/main/default/objects/Progress_Report__c/fields/Days_and_Times_Running_Program__c.field-meta.xml
<CustomField>
    <fullName>Days_and_Times_Running_Program__c</fullName>
    <label>Day(s) and Time(s) Running Program</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>