force-app/main/default/objects/Progress_Report__c/fields/Distributed_Newsletter__c.field-meta.xml
<CustomField>
    <fullName>Distributed_Newsletter__c</fullName>
    <label>Distributed Newsletter</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Frequency</valueSetName>
    </valueSet>
</CustomField>