force-app/main/default/objects/Progress_Report__c/fields/FirstPic_National_Org_Code__c.field-meta.xml
<CustomField>
    <fullName>FirstPic_National_Org_Code__c</fullName>
    <formula>Organization__r.FirstPic_National_Org_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FirstPic National Org Code</label>
    <type>Text</type>
</CustomField>