force-app/main/default/objects/Progress_Report__c/fields/FP_Report_Grant_ID__c.field-meta.xml
<CustomField>
    <fullName>FP_Report_Grant_ID__c</fullName>
    <formula>Grant__r.FP_Report_Grant_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FP Report Grant ID</label>
    <type>Text</type>
</CustomField>