force-app/main/default/objects/Progress_Report__c/fields/Greatest_Challenge_this_Reporting_Period__c.field-meta.xml
<CustomField>
    <fullName>Greatest_Challenge_this_Reporting_Period__c</fullName>
    <label>Greatest Challenge this Reporting Period</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>