force-app/main/default/objects/Progress_Report__c/fields/Increase_in_Perception_of_Social_Support__c.field-meta.xml
<CustomField>
    <fullName>Increase_in_Perception_of_Social_Support__c</fullName>
    <label>Increase in Perception of Social Support</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>