force-app/main/default/objects/Progress_Report__c/fields/Is_Overdue__c.field-meta.xml
<CustomField>
    <fullName>Is_Overdue__c</fullName>
    <formula>AND(
TODAY() &gt; Due_Date__c,
NOT(ISPICKVAL(Status__c, &apos;Submitted&apos;)), 
NOT(ISPICKVAL(Status__c, &apos;Approved&apos;))
)</formula>
    <label>Is Overdue</label>
    <type>Checkbox</type>
</CustomField>