force-app/main/default/objects/Progress_Report__c/fields/Law_Enforcement_Improved_Knowledge__c.field-meta.xml
<CustomField>
    <fullName>Law_Enforcement_Improved_Knowledge__c</fullName>
    <label>Law Enforcement Improved Knowledge</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>