force-app/main/default/objects/Progress_Report__c/fields/Link_to_Report__c.field-meta.xml
<CustomField>
    <fullName>Link_to_Report__c</fullName>
    <formula
  >IF( FirstPic_National_Org_Code__c = &quot;MDGO&quot; ,&quot;https://firstpicinc.secure.force.com/BJAGProgramReport?report=&quot; +  Id, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Link to Report</label>
    <type>Text</type>
</CustomField>