force-app/main/default/objects/Progress_Report__c/fields/Local_Organization_Id__c.field-meta.xml
<CustomField>
    <fullName>Local_Organization_Id__c</fullName>
    <formula>IF(ISBLANK(Organization__r.Local_Organization__c), 
CASESAFEID(Organization__c),
CASESAFEID(Organization__r.Local_Organization__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Local Organization Id</label>
    <type>Text</type>
</CustomField>