force-app/main/default/objects/Progress_Report__c/fields/Local_Organization_Name__c.field-meta.xml
<CustomField>
    <fullName>Local_Organization_Name__c</fullName>
    <formula>Organization__r.Local_Organization__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Local Organization Name</label>
    <type>Text</type>
</CustomField>