force-app/main/default/objects/Progress_Report__c/fields/Major_Activities_Planned__c.field-meta.xml
<CustomField>
    <fullName>Major_Activities_Planned__c</fullName>
    <label>Major Activities Planned</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>