force-app/main/default/objects/Progress_Report__c/fields/Mentor_Training_Survey_Completed__c.field-meta.xml
<CustomField>
    <fullName>Mentor_Training_Survey_Completed__c</fullName>
    <label>Mentor Training Survey Completed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_or_No</valueSetName>
    </valueSet>
</CustomField>