force-app/main/default/objects/Progress_Report__c/fields/Needs_Additional_Review__c.field-meta.xml
<CustomField>
    <fullName>Needs_Additional_Review__c</fullName>
    <formula>Submitted_Date__c &gt;  Reviewed_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Needs Additional Review</label>
    <type>Checkbox</type>
</CustomField>