force-app/main/default/objects/Progress_Report__c/fields/Needs_Attention__c.field-meta.xml
<CustomField>
    <fullName>Needs_Attention__c</fullName>
    <formula>OR(
ISPICKVAL(Problems_Barriers_Encountered__c, &apos;Yes&apos;),
ISPICKVAL(Assistance_Needed__c, &apos;Yes&apos;),
ISPICKVAL(On_Track_to_Complete_Program__c, &apos;No&apos;) 
)</formula>
    <label>Needs Attention</label>
    <type>Checkbox</type>
</CustomField>