force-app/main/default/objects/Progress_Report__c/fields/NPAL_Missing_PR_Red_Flag_List_Value__c.field-meta.xml
<CustomField>
    <fullName>NPAL_Missing_PR_Red_Flag_List_Value__c</fullName>
    <formula
  >CASE( Status__c,&quot;Not Started&quot;,1,&quot;In Progress&quot;,1,0)</formula>
    <inlineHelpText>NPAL Missing PR Red Flag List Value</inlineHelpText>
    <label>NPAL Missing PR Red Flag List Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>