force-app/main/default/objects/Progress_Report__c/fields/NPAL_Program_Red_Flag_List__c.field-meta.xml
<CustomField>
    <fullName>NPAL_Program_Red_Flag_List__c</fullName>
    <formula
  >IF((IF(ISPICKVAL( On_Track_to_Complete_Program__c,&quot;Yes&quot;),0,1)+IF(ISPICKVAL(  Problems_Barriers_Encountered__c ,&quot;No&quot;),0,1)=1),1,IF((IF(ISPICKVAL( On_Track_to_Complete_Program__c,&quot;Yes&quot;),0,1)+IF(ISPICKVAL(Problems_Barriers_Encountered__c ,&quot;No&quot;),0,1)=2),2,0))</formula>
    <inlineHelpText
  >NPAL Program Challenges Red Flag List Value. If both On Track and No Problems then 0, if one but not both then 1, if both then 2.</inlineHelpText>
    <label>NPAL Program Red Flag List</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>