force-app/main/default/objects/Progress_Report__c/fields/NPAL_Target_Number_of_Mentors__c.field-meta.xml
<CustomField>
    <fullName>NPAL_Target_Number_of_Mentors__c</fullName>
    <formula>Grant__r.NPAL_Target_Number_of_Mentors__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NPAL Target Number of Mentors</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>