force-app/main/default/objects/Progress_Report__c/fields/Number_Activities__c.field-meta.xml
<CustomField>
    <fullName>Number_Activities__c</fullName>
    <label>Number Activities</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>