force-app/main/default/objects/Progress_Report__c/fields/Number_Mentees_Currently_Participating__c.field-meta.xml
<CustomField>
    <fullName>Number_Mentees_Currently_Participating__c</fullName>
    <label>Number Mentees Currently Participating</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>