force-app/main/default/objects/Progress_Report__c/fields/Number_of_Mentors_Completed_Training__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Mentors_Completed_Training__c</fullName>
    <label>Number of Mentors Completed Training</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>