force-app/main/default/objects/Progress_Report__c/fields/Number_of_Mentors_Left_Program__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Mentors_Left_Program__c</fullName>
    <label>Number of Mentors Left Program</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>