force-app/main/default/objects/Progress_Report__c/fields/Number_of_New_Mentors_this_Month__c.field-meta.xml
<CustomField>
    <fullName>Number_of_New_Mentors_this_Month__c</fullName>
    <label>Number of New Mentors this Month</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>