force-app/main/default/objects/Progress_Report__c/fields/Number_of_Sessions_Attended__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Sessions_Attended__c</fullName>
    <label>Number of Sessions Attended</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>