force-app/main/default/objects/Progress_Report__c/fields/Number_of_Teen_Mentors__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Teen_Mentors__c</fullName>
    <label>Number of Teen Mentors</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>