force-app/main/default/objects/Progress_Report__c/fields/On_Track_to_Complete_Program__c.field-meta.xml
<CustomField>
    <fullName>On_Track_to_Complete_Program__c</fullName>
    <label>On Track to Complete Program</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_or_No</valueSetName>
    </valueSet>
</CustomField>