force-app/main/default/objects/Progress_Report__c/fields/On_Track_to_Complete_Program_Details__c.field-meta.xml
<CustomField>
    <fullName>On_Track_to_Complete_Program_Details__c</fullName>
    <label>On Track to Complete Program Details</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>