force-app/main/default/objects/Progress_Report__c/fields/Organization_Name__c.field-meta.xml
<CustomField>
    <fullName>Organization_Name__c</fullName>
    <formula>Organization__r.Name</formula>
    <label>Organization Name</label>
    <type>Text</type>
</CustomField>