force-app/main/default/objects/Progress_Report__c/fields/Organization_Name_Text__c.field-meta.xml
<CustomField>
    <fullName>Organization_Name_Text__c</fullName>
    <label>Organization Name Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>