force-app/main/default/objects/Progress_Report__c/fields/Other_Describe__c.field-meta.xml
<CustomField>
    <fullName>Other_Describe__c</fullName>
    <label>Other Describe</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>