force-app/main/default/objects/Progress_Report__c/fields/Participated_in_Program_8_Months_or_More__c.field-meta.xml
<CustomField>
    <fullName>Participated_in_Program_8_Months_or_More__c</fullName>
    <label>Participated in Program 8 Months or More</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>