force-app/main/default/objects/Progress_Report__c/fields/Participated_Less_Than_8_Months__c.field-meta.xml
<CustomField>
    <fullName>Participated_Less_Than_8_Months__c</fullName>
    <label>Participated Less Than 8 Months</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>