force-app/main/default/objects/Progress_Report__c/fields/Performance_Measurement__c.field-meta.xml
<CustomField>
    <fullName>Performance_Measurement__c</fullName>
    <label>Performance Measurement</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>