force-app/main/default/objects/Progress_Report__c/fields/Planned_Enrichment_Activity_Description__c.field-meta.xml
<CustomField>
    <fullName>Planned_Enrichment_Activity_Description__c</fullName>
    <label>Planned Enrichment Activity Description</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>