force-app/main/default/objects/Progress_Report__c/fields/Planning_Required_Enrichment_Activity__c.field-meta.xml
<CustomField>
    <fullName>Planning_Required_Enrichment_Activity__c</fullName>
    <label>Planning Required Enrichment Activity</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>