force-app/main/default/objects/Progress_Report__c/fields/Problems_Barriers_Encountered__c.field-meta.xml
<CustomField>
    <fullName>Problems_Barriers_Encountered__c</fullName>
    <label>Problems/Barriers Encountered</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_or_No</valueSetName>
    </valueSet>
</CustomField>