force-app/main/default/objects/Progress_Report__c/fields/Problems_Barriers_Encountered_Details__c.field-meta.xml
<CustomField>
    <fullName>Problems_Barriers_Encountered_Details__c</fullName>
    <label>Problems/Barriers Encountered Details</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>