force-app/main/default/objects/Progress_Report__c/fields/Program_Coordinator__c.field-meta.xml
<CustomField>
    <fullName>Program_Coordinator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program Coordinator</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel
  >Progress Reports (Program Coordinator)</relationshipLabel>
    <relationshipName>PC_Progress_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>