force-app/main/default/objects/Progress_Report__c/fields/Progress_of_Completed_Goals__c.field-meta.xml
<CustomField>
    <fullName>Progress_of_Completed_Goals__c</fullName>
    <label>Progress of Completed Goals</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>