force-app/main/default/objects/Progress_Report__c/fields/Projects_Effectiveness__c.field-meta.xml
<CustomField>
    <fullName>Projects_Effectiveness__c</fullName>
    <label>Project&apos;s Effectiveness</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>