force-app/main/default/objects/Progress_Report__c/fields/Reason_Requesting_Funds__c.field-meta.xml
<CustomField>
    <fullName>Reason_Requesting_Funds__c</fullName>
    <label>Reason Requesting Funds</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>