force-app/main/default/objects/Progress_Report__c/fields/Recently_Completed_Session__c.field-meta.xml
<CustomField>
    <fullName>Recently_Completed_Session__c</fullName>
    <label>Recently Completed Session</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>