force-app/main/default/objects/Progress_Report__c/fields/Reviewed_By__c.field-meta.xml
<CustomField>
    <fullName>Reviewed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reviewed By</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Progress Reports (Reviewed By)</relationshipLabel>
    <relationshipName>Progress_Reports2</relationshipName>
    <type>Lookup</type>
</CustomField>