force-app/main/default/objects/Progress_Report__c/fields/Reviewer_Name__c.field-meta.xml
<CustomField>
    <fullName>Reviewer_Name__c</fullName>
    <formula
  >Reviewed_By__r.FirstName + &apos; &apos; + Reviewed_By__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reviewer Name</label>
    <type>Text</type>
</CustomField>