force-app/main/default/objects/Progress_Report__c/fields/Sent_Back_By__c.field-meta.xml
<CustomField>
    <fullName>Sent_Back_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sent Back By</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Progress Reports (Sent Back By)</relationshipLabel>
    <relationshipName>Progress_Reports1</relationshipName>
    <type>Lookup</type>
</CustomField>