force-app/main/default/objects/Progress_Report__c/fields/Social_Media_Activities__c.field-meta.xml
<CustomField>
    <fullName>Social_Media_Activities__c</fullName>
    <label>Social Media Activities</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Frequency</valueSetName>
    </valueSet>
</CustomField>