force-app/main/default/objects/Progress_Report__c/fields/Submitted_By_Text__c.field-meta.xml
<CustomField>
    <fullName>Submitted_By_Text__c</fullName>
    <label>Submitted By Text</label>
    <length>100</length>
    <type>Text</type>
</CustomField>