force-app/main/default/objects/Progress_Report__c/fields/Submitter_Email__c.field-meta.xml
<CustomField>
    <fullName>Submitter_Email__c</fullName>
    <formula>Submitted_By__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Submitter Email</label>
    <type>Text</type>
</CustomField>