force-app/main/default/objects/Progress_Report__c/fields/Topics_Surveyed__c.field-meta.xml
<CustomField>
    <fullName>Topics_Surveyed__c</fullName>
    <label>Topics Surveyed</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Public Satisfaction with Police Services</fullName>
            </value>
            <value>
                <fullName
        >Public Satisfaction with Prosecution Services</fullName>
                <label>Public Satisfaction with Prosecution Services</label>
            </value>
            <value>
                <fullName
        >Public Satisfaction with Public Defender/Indigent Defense Services</fullName>
                <label
        >Public Satisfaction with Public Defender/Indigent Defense Services</label>
            </value>
            <value>
                <fullName>Public Satisfaction with Courts</fullName>
            </value>
            <value>
                <fullName
        >Public Perceptions of Crime/Disorder Problems</fullName>
                <label>Public Perceptions of Crime/Disorder Problems</label>
            </value>
            <value>
                <fullName>Personal Crime Experiences of Citizens</fullName>
            </value>
            <value>
                <fullName
        >None of the Above Surveys were Conducted/Sponsored on these Topics</fullName>
                <label
        >None of the Above Surveys were Conducted/Sponsored on these Topics</label>
            </value>
            <value>
                <fullName>Unsure/Don’t Know</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>