force-app/main/default/objects/Progress_Report__c/fields/Updated_Youth_Data__c.field-meta.xml
<CustomField>
    <fullName>Updated_Youth_Data__c</fullName>
    <label>Updated Youth Data</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_or_No</valueSetName>
    </valueSet>
</CustomField>