force-app/main/default/objects/Progress_Report__c/fields/WorkflowUpdate__c.field-meta.xml
<CustomField>
    <fullName>WorkflowUpdate__c</fullName>
    <defaultValue>true</defaultValue>
    <description
  >field to use for NPAL auto-email workflow initiation</description>
    <label>WorkflowUpdate</label>
    <type>Checkbox</type>
</CustomField>