force-app/main/default/objects/Progress_Report__c/fields/Youth_Added_During_Reporting_Period__c.field-meta.xml
<CustomField>
    <fullName>Youth_Added_During_Reporting_Period__c</fullName>
    <label>Youth Added During Reporting Period</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>