force-app/main/default/objects/Progress_Report__c/fields/Youth_Enrolled_at_Beginning__c.field-meta.xml
<CustomField>
    <fullName>Youth_Enrolled_at_Beginning__c</fullName>
    <label>Youth Enrolled at Beginning</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>