force-app/main/default/objects/Progress_Report__c/fields/Youth_Left_Program_Prematurely__c.field-meta.xml
<CustomField>
    <fullName>Youth_Left_Program_Prematurely__c</fullName>
    <label>Youth Left Program Prematurely</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>