force-app/main/default/objects/Progress_Report__c/fields/Youth_Participated_More_Than_4_Hours__c.field-meta.xml
<CustomField>
    <fullName>Youth_Participated_More_Than_4_Hours__c</fullName>
    <label>Youth Participated More Than 4 Hours</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>