force-app/main/default/objects/Progress_Report__c/fields/Youth_Received_Additional_Sentence__c.field-meta.xml
<CustomField>
    <fullName>Youth_Received_Additional_Sentence__c</fullName>
    <label>Youth Received Additional Sentence</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>