force-app/main/default/objects/Progress_Report__c/fields/Youth_Recommitted_to_Juvenile_Facility__c.field-meta.xml
<CustomField>
    <fullName>Youth_Recommitted_to_Juvenile_Facility__c</fullName>
    <label>Youth Recommitted to Juvenile Facility</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>