force-app/main/default/objects/Progress_Report__c/fields/Youth_Sentenced_to_Adult_Prison__c.field-meta.xml
<CustomField>
    <fullName>Youth_Sentenced_to_Adult_Prison__c</fullName>
    <label>Youth Sentenced to Adult Prison</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>